tests/pos/java-records/R4.java
public record R4<T>(T t) {}
