tests/neg/i22311/I0.java
public interface I0<T> {
    public default T func(T t) {
        return t;
    }
}
